# Proxieserve_Server

./: .env.example  .gitignore  APPLICATION_MODULE_SPEC.md  BACKEND_CLOSEOUT_PROMPT.md  CURSOR_BUILD_PROMPT.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_endpoints.py
app/: __init__.py  main.py  seed.py  worker.py
app/core/: __init__.py  api.py  codes.py  config.py  database.py  dependencies.py  email.py  events.py  exceptions.py  jobs.py  logging.py  middleware.py  notifier.py  observability.py  payments.py  ratelimit.py  redis.py  security.py  storage.py
app/modules/: __init__.py
app/modules/admin/: router.py  schemas.py  service.py
app/modules/analytics/: schemas.py  service.py
app/modules/applications/: __init__.py  constants.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/assignments/: jobs.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/audit/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/auth/: __init__.py  constants.py  dependencies.py  events.py  models.py  otp.py  repository.py  router.py  schemas.py  service.py  tokens.py
app/modules/broadcasts/: jobs.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/documents/: jobs.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/messages/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/oversight/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/payments/: jobs.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/platform/: models.py  repository.py  router.py  schemas.py  service.py
app/modules/services/: constants.py  models.py  repository.py  router.py  schemas.py  service.py
docs/: CONTRACTS.md  frontend-middleware-handoff.md
docs/ADR/: 0001-tech-stack.md
migrations/: env.py
migrations/versions/: 2b4c8a1e3f5d_add_is_active_to_users.py  3f7a9c2e1b4d_add_application_process_schema.py  4a8b1c2d3e5f_closeout_schema.py  9ac72f2643fd_initial_auth_schema.py
scripts/: run_server.py  seed.py
tests/: conftest.py
tests/integration/: test_auth_flows.py
